--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
     - hvr-ghc
 
 install:
-- export PATH=$HOME/.local/bin:/opt/ghc/7.10.3/bin$PATH
+- export PATH=$HOME/.local/bin:/opt/ghc/7.10.3/bin:$PATH
 - mkdir -p $HOME/.local/bin
 - curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
 
