--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2016-03-22T09:30:00Z
+  author: michael
+  title: "Why I prefer typeclass-based libraries"
+  path: 2016/03/why-i-prefer-typeclass-based-libraries.md
 - time: 2016-02-28T13:00:00Z
   author: michael
   title: "First class stream fusion"
