--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2016-04-01T00:00:00Z
+  author: michael
+  title: "Fixing the Monad instance for Either"
+  path: 2016/04/fixing-monad-either.md
 - time: 2016-03-22T09:30:00Z
   author: michael
   title: "Why I prefer typeclass-based libraries"
