--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2016-04-08T10:00:00Z
+  author: michael
+  title: "Stackifying the cookbook"
+  path: 2016/04/stackifying-the-cookbook.md
 - time: 2016-04-01T00:00:00Z
   author: michael
   title: "Fixing the Monad instance for Either"
