--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2016-04-10T15:00:00Z
+  author: eric
+  title: "Supporting separate read and write databases in persistent"
+  path: 2016/04/split-db.md
 - time: 2016-04-08T10:00:00Z
   author: michael
   title: "Stackifying the cookbook"
