Unused import warnings harmful blogpost

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2016-05-18T11:00:00Z
+  author: michael
+  title: Are unused import warnings harmful?
+  path: 2016/05/are-unused-import-warnings-harmful.md
 - time: 2016-04-10T15:00:00Z
   author: eric
   title: "Supporting separate read and write databases in persistent"
