--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2016-07-05T06:15:00Z
+  author: michael
+  title: New http-client and mono-traversable releases
+  path: 2016/07/new-http-client-mono-traversable.md
 - time: 2016-05-18T06:15:00Z
   author: michael
   title: Are unused import warnings harmful?
