--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2016-11-24T05:15:00Z
+  author: michael
+  title: "The New Yesod Development Server"
+  path: 2016/11/new-yesod-devel-server.md
 - time: 2016-11-06T21:39:00Z
   author: paul
   title: "Use MySQL Safely in Yesod Applications"
