--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,6 +1,6 @@
 - time: 2016-11-24T05:15:00Z
   author: michael
-  title: "The New Yesod Development Server"
+  title: "The New (Experimental) Yesod Development Server - Feedback Requested!"
   path: 2016/11/new-yesod-devel-server.md
 - time: 2016-11-06T21:39:00Z
   author: paul
