--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2017-02-08T05:15:00Z
+  author: michael
+  title: "Changes to Yesod's CI"
+  path: 2017/02/changes-yesods-ci.md
 - time: 2016-11-24T05:15:00Z
   author: michael
   title: "The New (Experimental) Yesod Development Server - Feedback Requested!"
