--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2017-06-05T05:15:00Z
+  author: michael
+  title: "Updated Yesod Scaffolding"
+  path: 2017/06/updated-yesod-scaffolding.md
 - time: 2017-02-08T05:15:00Z
   author: michael
   title: "Changes to Yesod's CI"
