mega-sdist announcement

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2017-11-21T15:15:00Z
+  author: michael
+  title: "mega-sdist: the mega repo helper"
+  path: 2017/11/mega-sdist.md
 - time: 2017-06-07T05:15:00Z
   author: michael
   title: "Updated Yesod Scaffolding"
