Upcoming Yesod breaking changes

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2018-01-11T23:15:00Z
+  author: michael
+  title: "Upcoming Yesod breaking changes"
+  path: 2018/01/upcoming-yesod-breaking-changes.md
 - time: 2017-11-21T15:15:00Z
   author: michael
   title: "mega-sdist: the mega repo helper"
