Blog post: deprecating GoogleEmail2

--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2019-02-12T15:49:00Z
+  author: michael
+  title: "Deprecating GoogleEmail2"
+  path: 2019/02/deprecating-googleemail2.md
 - time: 2018-01-11T21:29:00Z
   author: michael
   title: "Upcoming Yesod breaking changes"
