--- a/blog/authors.yaml
+++ b/blog/authors.yaml
@@ -28,3 +28,6 @@ njagi:
 eric:
   name: Eric Easley
   email: eric101111@gmail.com
+alexandre:
+  name: Alexandre Garcia de Oliveira
+  email: alexgrcol@hotmail.com
