--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2019-18-12T16:20:00Z
+  author: alexandre
+  title: "A new Yesod book in Portuguese"
+  path: 2090/02/bookportuguese.md
 - time: 2019-02-12T15:49:00Z
   author: michael
   title: "Deprecating GoogleEmail2"
