--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ addons:
 install:
 - export PATH=$HOME/.local/bin:/opt/ghc/7.10.3/bin:$PATH
 - mkdir -p $HOME/.local/bin
-- curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+- curl -L https://github.com/commercialhaskell/stack/releases/download/v2.1.3/stack-2.1.3-linux-x86_64-static.tar.gz | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
 
 script:
 - rm -f book/generated-xml/*
