--- a/blog/authors.yaml
+++ b/blog/authors.yaml
@@ -31,3 +31,6 @@ eric:
 alexandre:
   name: Alexandre Garcia de Oliveira
   email: alexgrcol@hotmail.com
+alex:
+  name: Alexander Nolte
+  email: nolte@lavabit.com
