--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2020-05-01T18:35:00Z
+  author: alex
+  title: "A new Haskell/Yesod Beginners Blog"
+  path: 2020/05/blogannouncement.md
 - time: 2019-12-19T03:29:00Z
   author: alexandre
   title: "A new Yesod book in Portuguese"
