--- a/blog/authors.yaml
+++ b/blog/authors.yaml
@@ -34,3 +34,6 @@ alexandre:
 alex:
   name: Alexander Nolte
   email: nolte@lavabit.com
+mlitchard:
+  name: Michael Litchard
+  email: michael@chatwisely.com
