--- a/blog/posts.yaml
+++ b/blog/posts.yaml
@@ -1,3 +1,7 @@
+- time: 2021-02-17T02:21:04.907Z
+  author: mlitchard
+  title: "We Made ChatWisely With Haskell"
+  path: 2021/02/chatwisely-intro.md
 - time: 2020-05-03T18:35:00Z
   author: alex
   title: "A new Haskell/Yesod Beginners Blog"
